--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,20 +1,29 @@
+body {
+    margin: 0;
+    font-family: "Lexend Mega", sans-serif;
+    color: black;
+    background-color: white;
+    font-size: 22px;
+    text-align: center;
+  }
+
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-left: 3%;
+    padding-right: 3%;
 }
 
 nav li {
    display: inline-flex;
 }
 
-#portofolio h2 {
-    text-align: center;
-}
-
 .projects {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    flex-flow: row wrap;
+    align-items: stretch;
 }
 
 .project {
@@ -25,3 +34,25 @@ nav li {
     width: 200px;
     height: 200px;
 }
+
+.team {
+    background-image: url("https://content.codecademy.com/PRO/independent-practice-projects/flexbox-business-site/img/blurred-road.jpg");
+    padding-top: 70px;
+    padding-top: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  
+  .teammate {
+    padding: 10px;
+    color: white;
+    flex-basis: 280px;
+  }
+  
+  .teammate img {
+    margin-left: auto;
+    margin-right: auto;
+    width: 200px;
+    height: auto;
+  }
